--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compativle" content="ie=edge">
- <title>Document</title>
+ <title>PGping Page</title>
 </head>
 <boddy>
- <h1>Github Pages 테스트</h1>
- <p>테스트</p>
+ <h1>Github Page</h1>
+ <p>Made By PGping</p>
 </boddy>
 </html>
