--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ text="black"
 			<h1 class="abr">유니코드 변환기</h1>
 		<div class="back-facing">
     <meta charset="utf-8">
-    <title>아이콘</title>
+    <title>아이콘1</title>
      <a href="https://pgpingp.github.io/PGping/Unic.html" target="_blank">
       <img src="http://cfile4.uf.tistory.com/image/993DB833599965D8166364" width="80px" height="85px">
      </a>
