--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ text="black"
 	
 	<div class="element-card">
 		<div class="front-facing">
-			<h1 class="abr">Web</h1>
+			<h1 class="abr">없음</h1>
 		</div>
 		<div class="back-facing">
 			<p>없음</p>
@@ -71,7 +71,7 @@ text="black"
 			<h1 class="abr">없음</h1>
 		</div>
 		<div class="back-facing">
-			<p>Donate Site</p>
+			<p>D없음</p>
 			<p><a class="btn" href="https://pgpingp.github.io/PGping/" target="_blank">바로가기</a></p>
 		</div>
 
