--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>3D Particle Explorations | Demo 1 | Codrops</title>
+		<title>3D Particle Explorations | Demo 3 | Codrops</title>
 		<meta name="description" content="An exploration of 3D particle animations using three.js and easing" />
 		<meta name="keywords" content="preloader, loader, animation, 3d, particles, three.js, easing, web development" />
 		<meta name="author" content="Jack Rugile for Codrops" />
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
-	<body class="demo-1">
+	<body class="demo-3">
 		<svg class="hidden">
 			<symbol id="icon-arrow" viewBox="0 0 24 24">
 				<title>arrow</title>
@@ -80,9 +80,9 @@
 				<a class="github" href="https://github.com/jackrugile/3d-particle-explorations" title="Find this project on GitHub"><svg class="icon icon--github"><use xlink:href="#icon-github"></use></svg></a>
 				<nav class="demos">
 					<svg class="icon icon--keyboard"><use xlink:href="#icon-keyboard"></use></svg>
-					<a class="demo demo--current" href="index.html"><span>Demo 1</span></a>
+					<a class="demo" href="index.html"><span>Demo 1</span></a>
 					<a class="demo" href="index2.html"><span>Demo 2</span></a>
-					<a class="demo" href="index3.html"><span>Demo 3</span></a>
+					<a class="demo demo--current" href="index3.html"><span>Demo 3</span></a>
 					<a class="demo" href="index4.html"><span>Demo 4</span></a>
 					<a class="demo" href="index5.html"><span>Demo 5</span></a>
 					<a class="demo" href="index6.html"><span>Demo 6</span></a>
@@ -103,7 +103,7 @@
 			<div class="loader"></div>
 			<div class="content-outer">
 				<div class="content-inner">
-					<h1>Oscillation</h1>
+					<h1>Coherence</h1>
 					<a href="#" class="replay-animation">Replay</a>
 				</div>
 			</div>
@@ -112,6 +112,6 @@
 		<script src="js/vendor/three.min.js"></script>
 		<script src="js/vendor/OrbitControls.js"></script>
 		<script src="js/vendor/fast-simplex-noise.js"></script>
-		<script src="dist/js/demo-1/index.bundle.js"></script>
+		<script src="dist/js/demo-3/index.bundle.js"></script>
 	</body>
 </html>
