--- a/PUBG-B612/mail.html
+++ b/PUBG-B612/mail.html
@@ -5,9 +5,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-</style>
 <body class="w3-light-grey">
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
   <div class="w3-row-padding">
@@ -48,7 +45,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   </div>
 </div>
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p><br>인증 코드 : 1CodeCode1<br><br></p>
+  <p><br>인증 코드 : JVBC3KIHI<br><br></p>
 </footer>
 </body>
 </html>
