--- a/PUBG-B612/mail.html
+++ b/PUBG-B612/mail.html
@@ -1,51 +1,51 @@
-<html>
-<title>Team. PG</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<body class="w3-light-grey">
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
-  <div class="w3-row-padding">
-    <div class="w3-third">
-      <div class="w3-white w3-text-grey w3-card-4">
-        <div class="w3-display-container">
-          <img src="http://pgpingp.github.io/PGping/PUBG-B612/B612.png" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2 class="w3-text-green w3-padding-16">B612 Account Check</h2>
+<html style="box-sizing: inherit;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;overflow-x: hidden;font-family: Verdana,sans-serif;font-size: 15px;line-height: 1.5;">
+<title style="box-sizing: inherit;">Team. PG</title>
+<meta charset="UTF-8" style="box-sizing: inherit;">
+<meta name="viewport" content="width=device-width, initial-scale=1" style="box-sizing: inherit;">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" style="box-sizing: inherit;">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" style="box-sizing: inherit;">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" style="box-sizing: inherit;">
+<body class="w3-light-grey" style="box-sizing: inherit;margin: 0;font-family: Verdana,sans-serif;font-size: 15px;line-height: 1.5;color: #000!important;background-color: #f1f1f1!important;">
+<div class="w3-content w3-margin-top" style="max-width: 1400px;box-sizing: inherit;margin-left: auto;margin-right: auto;margin-top: 16px!important;">
+  <div class="w3-row-padding" style="box-sizing: inherit;padding: 0 8px;">
+    <div class="w3-third" style="box-sizing: inherit;float: left;width: 33.33333%;padding: 0 8px;">
+      <div class="w3-white w3-text-grey w3-card-4" style="box-sizing: inherit;box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);color: #757575!important;background-color: #fff!important;">
+        <div class="w3-display-container" style="box-sizing: inherit;position: relative;">
+          <img src="http://pgpingp.github.io/PGping/PUBG-B612/B612.png" style="width: 100%;box-sizing: inherit;border-style: none;vertical-align: middle;" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-black" style="box-sizing: inherit;position: absolute;left: 0;bottom: 0;padding: 0.01em 16px;color: #000!important;">
+            <h2 class="w3-text-green w3-padding-16" style="box-sizing: inherit;font-size: 30px;font-family: &quot;Segoe UI&quot;,Arial,sans-serif;font-weight: 400;margin: 10px 0;padding-top: 16px!important;padding-bottom: 16px!important;color: #4CAF50!important;">B612 Account Check</h2>
           </div>
         </div>
-        <div class="w3-container">
-          <p></i>WellCome! B612-Pak</p>
-          <hr>
-          <br>
+        <div class="w3-container" style="box-sizing: inherit;padding: 0.01em 16px;">
+          <p style="box-sizing: inherit;">WellCome! B612-Pak</p>
+          <hr style="box-sizing: content-box;height: 0;overflow: visible;border: 0;border-top: 1px solid #eee;margin: 20px 0;">
+          <br style="box-sizing: inherit;">
         </div>
-      </div><br>
+      </div><br style="box-sizing: inherit;">
     </div>
-    <div class="w3-twothird">
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Developer</h2>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>B612-Pak</b></h5>
-          <h6 class="w3-text-teal"><span class="w3-tag w3-teal w3-round">Team. PG</span></h6>
-          <p>본 프로그램의 제작자가 만든 프로그래밍 팀입니다.</p>
-          <hr>
+    <div class="w3-twothird" style="box-sizing: inherit;float: left;width: 66.66666%;padding: 0 8px;">
+      <div class="w3-container w3-card w3-white w3-margin-bottom" style="box-sizing: inherit;padding: 0.01em 16px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);margin-bottom: 16px!important;color: #000!important;background-color: #fff!important;">
+        <h2 class="w3-text-grey w3-padding-16" style="box-sizing: inherit;font-size: 30px;font-family: &quot;Segoe UI&quot;,Arial,sans-serif;font-weight: 400;margin: 10px 0;padding-top: 16px!important;padding-bottom: 16px!important;color: #757575!important;"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal" style="box-sizing: inherit;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: 36px!important;text-rendering: auto;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;width: 1.28571429em;text-align: center;margin-right: 16px!important;color: #009688!important;"></i>Developer</h2>
+        <div class="w3-container" style="box-sizing: inherit;padding: 0.01em 16px;">
+          <h5 class="w3-opacity" style="box-sizing: inherit;font-size: 18px;font-family: &quot;Segoe UI&quot;,Arial,sans-serif;font-weight: 400;margin: 10px 0;opacity: 0.60;"><b style="box-sizing: inherit;">B612-Pak</b></h5>
+          <h6 class="w3-text-teal" style="box-sizing: inherit;font-size: 16px;font-family: &quot;Segoe UI&quot;,Arial,sans-serif;font-weight: 400;margin: 10px 0;color: #009688!important;"><span class="w3-tag w3-teal w3-round" style="box-sizing: inherit;background-color: #009688!important;color: #fff!important;display: inline-block;padding-left: 8px;padding-right: 8px;text-align: center;border-radius: 4px;">Team. PG</span></h6>
+          <p style="box-sizing: inherit;">본 프로그램의 제작자가 만든 프로그래밍 팀입니다.</p>
+          <hr style="box-sizing: content-box;height: 0;overflow: visible;border: 0;border-top: 1px solid #eee;margin: 20px 0;">
         </div>
       </div>
-      <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-green w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>B612-Pak</h2>
-        <div class="w3-container">
-          <h6 class="w3-text-teal">이메일 인증</h6>
-          <p>다른 위치에서 접속이 확인 되었습니다. 이메일 인증 코드를 프로그램에 적어주세요.<br>만약 본인이 아니라면 관리자에게 문의 부탁드립니다.<br><br><br></p>
-          <hr>
+      <div class="w3-container w3-card w3-white" style="box-sizing: inherit;padding: 0.01em 16px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);color: #000!important;background-color: #fff!important;">
+        <h2 class="w3-text-green w3-padding-16" style="box-sizing: inherit;font-size: 30px;font-family: &quot;Segoe UI&quot;,Arial,sans-serif;font-weight: 400;margin: 10px 0;padding-top: 16px!important;padding-bottom: 16px!important;color: #4CAF50!important;"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal" style="box-sizing: inherit;display: inline-block;font: normal normal normal 14px/1 FontAwesome;font-size: 36px!important;text-rendering: auto;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;width: 1.28571429em;text-align: center;margin-right: 16px!important;color: #009688!important;"></i>B612-Pak</h2>
+        <div class="w3-container" style="box-sizing: inherit;padding: 0.01em 16px;">
+          <h6 class="w3-text-teal" style="box-sizing: inherit;font-size: 16px;font-family: &quot;Segoe UI&quot;,Arial,sans-serif;font-weight: 400;margin: 10px 0;color: #009688!important;">이메일 인증</h6>
+          <p style="box-sizing: inherit;">다른 위치에서 접속이 확인 되었습니다. 이메일 인증 코드를 프로그램에 적어주세요.<br style="box-sizing: inherit;">만약 본인이 아니라면 관리자에게 문의 부탁드립니다.<br style="box-sizing: inherit;"><br style="box-sizing: inherit;"><br style="box-sizing: inherit;"></p>
+          <hr style="box-sizing: content-box;height: 0;overflow: visible;border: 0;border-top: 1px solid #eee;margin: 20px 0;">
         </div>
       </div>
     </div>
   </div>
 </div>
-<footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p><br>인증 코드 : JVBC3KIHI<br><br></p>
+<footer class="w3-container w3-teal w3-center w3-margin-top" style="box-sizing: inherit;display: block;padding: 0.01em 16px;text-align: center!important;margin-top: 16px!important;color: #fff!important;background-color: #009688!important;">
+  <p style="box-sizing: inherit;"><br style="box-sizing: inherit;">인증 코드 : JVBC3KIHI<br style="box-sizing: inherit;"><br style="box-sizing: inherit;"></p>
 </footer>
 </body>
 </html>
