--- a/Log.html
+++ b/Log.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>마인크래프트 CityRiser 서버 연결 웹사이트</title>
+<title>DB Log</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 <meta name="description" content="">
