--- a/Log.html
+++ b/Log.html
@@ -7,14 +7,9 @@
 <meta name="keywords" content="">
 <link rel="shortcut icon" type="image/x-icon" href="http://cfile4.uf.tistory.com/image/993DB833599965D8166364" />
 </head>
-<frameset rows="100%,*" border="0">
-<frame src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcLyaHajZK3mBQ8dgwQFCYr_SZKDBpYGhofs4aDdSOs5RcJz2MuuOyK-7g1AO4XbwAk_h1t-YckwzN/pubhtml">
-<noframes>
-<body>
-<p><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcLyaHajZK3mBQ8dgwQFCYr_SZKDBpYGhofs4aDdSOs5RcJz2MuuOyK-7g1AO4XbwAk_h1t-YckwzN/pubhtml">test</a></p>
-</body>
-</noframes>
-</frameset>
-</html>
 
+<div class="iframebox">
+ <iframe src="동영상주소" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcLyaHajZK3mBQ8dgwQFCYr_SZKDBpYGhofs4aDdSOs5RcJz2MuuOyK-7g1AO4XbwAk_h1t-YckwzN/pubhtml?gid=344753854&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0" allowfullscreen></iframe>
 
+</div>​
