--- a/Log.html
+++ b/Log.html
@@ -10,6 +10,6 @@
 
 <div style="position:relative;width:100%;height:0;padding-bottom:100%">
 
-<iframe style="position:absolute;top:0;left:0" width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcLyaHajZK3mBQ8dgwQFCYr_SZKDBpYGhofs4aDdSOs5RcJz2MuuOyK-7g1AO4XbwAk_h1t-YckwzN/pubhtml?amp;single=true&amp;widget=true&amp;headers=false" frameborder="no" scrolling="no"></iframe>
+<iframe style="position:absolute;top:0;left:0" width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcLyaHajZK3mBQ8dgwQFCYr_SZKDBpYGhofs4aDdSOs5RcJz2MuuOyK-7g1AO4XbwAk_h1t-YckwzN/pubhtml" frameborder="no" scrolling="no"></iframe>
 
 </div>
