--- a/PG/mail.html
+++ b/PG/mail.html
@@ -18,7 +18,7 @@
         <div class="header" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);" id="emb-email-header-container">
         <!--[if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 600px"><![endif]-->
           <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 6px;Margin-bottom: 20px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
-            <div class="logo-center" align="center" id="emb-email-header"><a style="text-decoration: none;transition: opacity 0.1s ease-in;color: #c3ced9;" target="_blank"><img style="display: block;height: auto;width: 100%;border: 0;max-width: 220px;" src="https://pgpingp.github.io/PGping/PUBG-B612/B612.png" alt="B612" width="220"></a></div>
+            <div class="logo-center" align="center" id="emb-email-header"><a style="text-decoration: none;transition: opacity 0.1s ease-in;color: #c3ced9;" target="_blank"><img style="display: block;height: auto;width: 100%;border: 0;max-width: 220px;" src="https://pgpingp.github.io/PGping/PG/note.png" alt="notebook" width="220"></a></div>
           </div>
         <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
         </div>
@@ -35,7 +35,7 @@
         
             <div style="Margin-left: 20px;Margin-right: 20px;Margin-bottom: 24px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-        <h2 class="size-30" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 26px;line-height: 34px;text-align: center;" lang="x-size-30"><strong>B612 Pak Service</strong></h2><h3 style="Margin-top: 16px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 16px;line-height: 24px;text-align: center;">다른 컴퓨터에서 코드 사용이 확인 되었습니다.&nbsp;</h3><p style="Margin-top: 12px;Margin-bottom: 0;text-align: center;">프로그램 에서 코드 인증을 진행 해주시길 바랍니다.</p><p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;">만약 자신이 한적이 없다면. 개발자에게 문의 해주시길 바랍니다.</p>
+        <h2 class="size-30" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 26px;line-height: 34px;text-align: center;" lang="x-size-30"><strong>PG Service</strong></h2><h3 style="Margin-top: 16px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 16px;line-height: 24px;text-align: center;">다른 컴퓨터에서 코드 사용이 확인 되었습니다.&nbsp;</h3><p style="Margin-top: 12px;Margin-bottom: 0;text-align: center;">프로그램 에서 코드 인증을 진행 해주시길 바랍니다.</p><p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;">만약 자신이 한적이 없다면. 개발자에게 문의 해주시길 바랍니다.</p>
       </div>
     </div>
         
