--- a/PG/mail.html
+++ b/PG/mail.html
@@ -35,7 +35,7 @@
         
             <div style="Margin-left: 20px;Margin-right: 20px;Margin-bottom: 24px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-        <h2 class="size-30" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 26px;line-height: 34px;text-align: center;" lang="x-size-30"><strong>PG Service</strong></h2><h3 style="Margin-top: 16px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 16px;line-height: 24px;text-align: center;">다른 컴퓨터에서 코드 사용이 확인 되었습니다.&nbsp;</h3><p style="Margin-top: 12px;Margin-bottom: 0;text-align: center;">프로그램 에서 코드 인증을 진행 해주시길 바랍니다.</p><p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;">만약 자신이 한적이 없다면. 개발자에게 문의 해주시길 바랍니다.</p>
+        <h2 class="size-30" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 26px;line-height: 34px;text-align: center;" lang="x-size-30"><strong>PG Service</strong></h2><h3 style="Margin-top: 16px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #000;font-size: 16px;line-height: 24px;text-align: center;">회원가입을 해주셔서 감사합니다.&nbsp;</h3><p style="Margin-top: 12px;Margin-bottom: 0;text-align: center;">이메일 인증후 정상적인 사용이 가능합니다..</p><p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;">코드를 프로그램에 적어주세요.</p>
       </div>
     </div>
         
