--- a/PG/mail.html
+++ b/PG/mail.html
@@ -18,7 +18,7 @@
         <div class="header" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);" id="emb-email-header-container">
         <!--[if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 600px"><![endif]-->
           <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 6px;Margin-bottom: 20px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
-            <div class="logo-center" align="center" id="emb-email-header"><a style="text-decoration: none;transition: opacity 0.1s ease-in;color: #c3ced9;" target="_blank"><img style="display: block;height: auto;width: 100%;border: 0;max-width: 220px;" src="https://pgpingp.github.io/PGping/PG/note.png" alt="notebook" width="220"></a></div>
+            <div class="logo-center" align="center" id="emb-email-header"><a style="text-decoration: none;transition: opacity 0.1s ease-in;color: #c3ced9;" target="_blank"><img style="display: block;height: auto;width: 100%;border: 0;max-width: 220px;" src="https://pgpingp.github.io/PGping/PG/notebook.png" alt="notebook" width="220"></a></div>
           </div>
         <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
         </div>
