--- a/B612.html
+++ b/B612.html
@@ -1,3 +1,4 @@
+</div>
 <html>
 <head>
 <title>B612-Pak</title>
@@ -7,9 +8,12 @@
 <meta name="keywords" content="">
 <link rel="shortcut icon" type="image/x-icon" href="http://cfile4.uf.tistory.com/image/993DB833599965D8166364" />
 </head>
-
-<div style="position:relative;width:100%;height:0;padding-bottom:100%">
-
-<iframe style="position:absolute;top:0;left:0" width="100%" height="100%" src="https://script.google.com/macros/s/AKfycbzVdzWnWpcExfFeFiqMYy9WyWJnG004GQ_aeY_5plsB_sL6WOq0/exec" frameborder="no" scrolling="no"></iframe>
-
-</div>
+<frameset rows="100%,*" border="0">
+<frame src="  https://script.google.com/macros/s/AKfycbzVdzWnWpcExfFeFiqMYy9WyWJnG004GQ_aeY_5plsB_sL6WOq0/exec">
+<noframes>
+<body>
+<p><a href="  https://script.google.com/macros/s/AKfycbzVdzWnWpcExfFeFiqMYy9WyWJnG004GQ_aeY_5plsB_sL6WOq0/exec</a></p>
+</body>
+</noframes>
+</frameset>
+</html>
